--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
+        <spotbugs-maven-plugin.version>3.1.3</spotbugs-maven-plugin.version>
 
     </properties>
 
@@ -222,6 +223,21 @@
                     <generateBackupPoms>false</generateBackupPoms>
                     <rulesUri>file://${project.basedir}/maven-version-rules.xml</rulesUri>
                 </configuration>
+            </plugin>
+
+            <!-- SPOTBUGS -->
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>${spotbugs-maven-plugin.version}</version>
+                <dependencies>
+                    <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>${spotbugs-maven-plugin.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
