--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
         <spotbugs-maven-plugin.version>3.1.6</spotbugs-maven-plugin.version>
+        <maven-pmd-plugin.version>3.10.0</maven-pmd-plugin.version>
+
 
     </properties>
 
@@ -238,6 +240,13 @@
                         <version>${spotbugs-maven-plugin.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+
+            <!-- PMD -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven-pmd-plugin.version}</version>
             </plugin>
 
         </plugins>
