--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
                 </executions>
             </plugin>
 
-            <!-- Minimum maven version -->
+            <!-- Minimum maven version (enforcer)-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -211,6 +211,7 @@
                 </configuration>
             </plugin>
 
+            <!-- Sonar -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
@@ -227,7 +228,7 @@
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>${spotbugs-maven-plugin.version}</version>
+                        <version>3.1.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
